fixes to eximchain page and subheading styling on mobile

--- a/scss/components/_sections.scss
+++ b/scss/components/_sections.scss
@@ -799,6 +799,14 @@ p {
   color: $heading-color;
 }
 
+@media (max-width: 512px) {
+  .project-subheading {
+    padding: 0 0.8rem 0.5rem 0;
+    margin-left: 0;
+    margin-top: 1rem;
+  }
+}
+
 .photo-container {
   max-width: 100%;
   padding-top: 6rem;
@@ -1479,6 +1487,13 @@ h2 .project {
 
 @media (max-width: 512px) {
   .project-meat-tulip {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+
+@media (max-width: 512px) {
+  .project-meat-eximchain {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
